Se agregaron todas las recetas

--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -77,6 +77,10 @@ ul.Nav li a{
 .Nav a.active::after {
     width: 100%;
 }
+.Nav-responsive {
+    display: none;
+}
+
 section.Home_section {
     background: url(../Images/Artemis_botella.jpg) no-repeat;
     background-size: cover;
@@ -247,23 +251,37 @@ footer {
 .grid-container {
     display: grid;
     border: 5px solid blue;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 5fr 1fr;
     grid-template-rows: repeat(6, max-height);
     padding-top: 20px;
     grid-row-gap: 10px;
     grid-column-gap: 5px;
-    overflow: auto;
+    justify-content: space-between;
 }
 .grid-item {
+    background-color: rgba(17,21,23,0.8);
     border: 5px solid blue;
+    padding: 5px 10px;
+    color: white;
+}
+.grid-item ul {
+    padding-left: 10px;
 }
 
 .grid-item img{
-    height: 150px;
+    width: 100%;
+}
+
+.grid-item span {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 30px
 }
 
 #fotorec1,
-#fotorec2 {
+#fotorec2,
+#fotorec3,
+#fotorec4,
+#fotorec5 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -271,10 +289,8 @@ footer {
 .grid-item:first-child {
     grid-column: 1 / 3;
     text-align: center;
-    align-self: end;
     font-size: 50px;
     font-family: 'Bebas Neue', cursive;
-    
 }
 
 
