--- a/Estilos/style-con-bootstrap.css
+++ b/Estilos/style-con-bootstrap.css
@@ -48,7 +48,8 @@
 }
 
 .home-section, 
-.Home_Nuestro {
+.Home_Nuestro,
+.galery-section {
     background-image: url(https://images.adsttc.com/media/images/5c04/7566/08a5/e5c7/1100/01c2/large_jpg/12247681_10156151865110702_6739505303249166555_o.jpg?1543796058);
     background-repeat: no-repeat;
     background-size: cover;
