--- a/Estilos/style-con-bootstrap.css
+++ b/Estilos/style-con-bootstrap.css
@@ -8,6 +8,10 @@
     background-color: rgba(17,21,23,1);
 }
 
+.font-artemis {
+    font-family: 'Bebas Neue', cursive;
+}
+
 .Nav-visible.animate__animated.animate__fadeIn {
     animation-delay: 0.5s;
 }
