--- a/Estilos/style-con-bootstrap.css
+++ b/Estilos/style-con-bootstrap.css
@@ -62,7 +62,8 @@
 .home-section, 
 .Home_Nuestro,
 .galery-section,
-.section-recetas {
+.section-recetas,
+.sec_contact {
     background-image: url(https://images.adsttc.com/media/images/5c04/7566/08a5/e5c7/1100/01c2/large_jpg/12247681_10156151865110702_6739505303249166555_o.jpg?1543796058);
     background-repeat: no-repeat;
     background-size: cover;
@@ -95,6 +96,12 @@
 #Titulo {
     font-size: 40px;
 }
+
+/* Galería */
+.Video iframe{
+    width:420
+}
+
 
 @media screen and (max-width: 1200px) {
     .Nav-visible a{
@@ -134,5 +141,11 @@
     }
     .autor {
         font-size: 70%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .Video iframe {
+        width: 75%;
     }
 }
