--- a/scss/Estilos.scss
+++ b/scss/Estilos.scss
@@ -13,7 +13,9 @@
 }
 
 
-
+.navbar-toggler{
+    border-style: none;
+}
 .Nav-visible.animate__animated.animate__fadeIn {
     animation-delay: 0.5s;
 }
